--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The Full Stack Web Development site of Greg Olson">
+    <meta name="description" content="The Full Stack Web Development Portfolio of Greg Olson">
     <meta name="author" content="Greg Olson">
     <meta name="keywords"
         content="Javascript, CSS, HTML, React, Node, Express, MySQL, Sequelize, Mongo, Mongoose, Firebase, Handlebars, Bootstrap, Materialize, Photoshop, Illustrator, Solidworks, Github, Full Stack web development, Java, Swift, App development">
@@ -16,7 +16,7 @@
 
 <body>
 
-    This is a website
+    This is a portfolio
 
 
 
