starting over and making progress with svg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Mountainflow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="The Full Stack Web Development site of Greg Olson">
     <meta name="author" content="Greg Olson">
@@ -15,11 +15,40 @@
 </head>
 
 <body>
-
-    This is a website
-
-
-
+    <div class="main-container">
+        <div class="header">
+            <p>Mountainflow</p>
+            <p>Full Stack Web Development of Greg Olson</p>
+        </div>
+        <div class="main">
+            <svg width="100%" height="100%" viewBox="0 0 1201 180" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+                <path id="m"
+                    d="M0.375,137.066l261.986,0l47.042,-103.559l27.722,47.979l27.028,-47.979l46.708,103.559l789.514,3.282"
+                    style="fill:none;stroke:#000;stroke-width:0.75px;" />
+                <path id="sun"
+                    d="M252.304,117.375c-2.882,-8.733 -4.429,-18.062 -4.429,-27.75c0,-49.258 39.992,-89.25 89.25,-89.25c49.258,0 89.25,39.992 89.25,89.25c0,9.688 -1.547,19.017 -4.429,27.75"
+                    style="fill:none;stroke:#000;stroke-width:1px;" />
+                <path id="riverL"
+                    d="M363.375,174.71c-8.519,2.706 -17.59,4.165 -27,4.165c-14.009,0 -27.269,-3.235 -39.071,-9l0.071,0c-9.934,-28.592 11.809,-36.283 30,-47.25c18.191,-10.967 9,-24 9,-24l0,-15"
+                    style="fill:none;stroke:#000;stroke-width:0.75px;" />
+                <path id="riverR"
+                    d="M337.875,83.625l0,15c0,0 8.463,12.819 -4.5,25.5c-14.666,14.347 -0.184,45.658 30,50.25"
+                    style="fill:none;stroke:#000;stroke-width:0.75px;" />
+                <path id="flowL"
+                    d="M338.697,111.375c0,0 0.412,4.397 -10.572,13.5c-10.984,9.103 -19.016,9.197 -23.25,23.25"
+                    style="fill:none;stroke:#000;stroke-width:0.36px;" />
+                <path id="flowM" d="M338.625,115.125c0,0 -0.566,2.147 -9,11.25c-8.434,9.103 -23.666,13.697 -19.5,42.75"
+                    style="fill:none;stroke:#000;stroke-width:0.36px;" />
+                <path id="flowR" d="M324.375,134.625c0,0 -14.554,20.222 5.25,37.5"
+                    style="fill:none;stroke:#000;stroke-width:0.36px;" />
+            </svg>
+        </div>
+        <div class="nav">
+            <p>A bunch of Buttons</p>
+        </div>
+    </div>
 
     <script src="./assets/javascript/script.js"></script>
 </body>
