--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Greg Olson">
     <meta name="keywords"
         content="Javascript, CSS, HTML, React, Node, Express, MySQL, Sequelize, Mongo, Mongoose, Firebase, Handlebars, Bootstrap, Materialize, Photoshop, Illustrator, Solidworks, Github, Full Stack web development, Java, Swift, App development">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100|Montserrat:300,400|Raleway:100|Roboto:100&display=swap">
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/media.css" />
@@ -18,7 +19,7 @@
     <div class="main-container">
         <div class="header">
             <p>Mountainflow</p>
-            <p>Full Stack Web Development of Greg Olson</p>
+            <p>Full Stack Web Development by Greg Olson</p>
         </div>
         <div class="main">
             <svg width="100%" height="100%" viewBox="0 0 1201 180" version="1.1" xmlns="http://www.w3.org/2000/svg"
