--- a/index.html
+++ b/index.html
@@ -47,12 +47,17 @@
             </svg>
         </div>
         <div class="nav">
-            <p>A bunch of Buttons</p>
+            <ul>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="https://github.com/mountainflow">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow">LinkedIn</a></li>         
+            </ul>
         </div>
     </div>
 
     <script src="./assets/javascript/script.js"></script>
 </body>
-/* this is a termux test */
 
 </html>
