added titles and portfolio page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="author" content="Greg Olson">
     <meta name="keywords"
         content="Javascript, CSS, HTML, React, Node, Express, MySQL, Sequelize, Mongo, Mongoose, Firebase, Handlebars, Bootstrap, Materialize, Photoshop, Illustrator, Solidworks, Github, Full Stack web development, Java, Swift, App development">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100|Montserrat:300,400|Raleway:100|Roboto:100&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:100|Montserrat:300,400|Raleway:100|Roboto:100&display=swap">
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/media.css" />
@@ -48,11 +49,11 @@
         </div>
         <div class="nav">
             <ul>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="https://github.com/mountainflow">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow">LinkedIn</a></li>         
+                <li><a href="./portfolio.html" title="Portfolio">Portfolio</a></li>
+                <li><a href="#" title="Resume">Resume</a></li>
+                <li><a href="#" title="About Me">About</a></li>
+                <li><a href="https://github.com/mountainflow" title="GitHub">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow" title="LinkedIn">LinkedIn</a></li>
             </ul>
         </div>
     </div>
