--- a/portfolio.html
+++ b/portfolio.html
@@ -3,23 +3,37 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Mountainflow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The Full Stack Web Development Portfolio of Greg Olson">
+    <meta name="description" content="The Full Stack Web Development site of Greg Olson">
     <meta name="author" content="Greg Olson">
     <meta name="keywords"
         content="Javascript, CSS, HTML, React, Node, Express, MySQL, Sequelize, Mongo, Mongoose, Firebase, Handlebars, Bootstrap, Materialize, Photoshop, Illustrator, Solidworks, Github, Full Stack web development, Java, Swift, App development">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:100|Montserrat:300,400|Raleway:100|Roboto:100&display=swap">
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/media.css" />
 </head>
 
 <body>
+    <div class="main-container">
+        <div class="header">
+            <p>Portfolio</p>
+        </div>
+        <div class="main">
 
-    This is a portfolio
-
-
-
+        </div>
+        <div class="nav">
+            <ul>
+                <li><a href="./index.html" title="Home">Home</a></li>
+                <li><a href="#" title="Resume">Resume</a></li>
+                <li><a href="#" title="About Me">About</a></li>
+                <li><a href="https://github.com/mountainflow" title="GitHub">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow" title="LinkedIn">LinkedIn</a></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="./assets/javascript/script.js"></script>
 </body>
