--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
     <div class="main-container">
         <div class="header">
             <p>Portfolio</p>
+            <p>Coming Soon!</p>
         </div>
         <div class="main">
 
@@ -27,7 +28,7 @@
         <div class="nav">
             <ul>
                 <li><a href="./index.html" title="Home">Home</a></li>
-                <li><a href="#" title="Resume">Resume</a></li>
+                <li><a href="./assets/CV/greg-olson-resume.pdf" title="Resume">Resume</a></li>
                 <li><a href="#" title="About Me">About</a></li>
                 <li><a href="https://github.com/mountainflow" title="GitHub">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow" title="LinkedIn">LinkedIn</a></li>
