--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="nav">
             <ul>
                 <li><a href="./portfolio.html" title="Portfolio">Portfolio</a></li>
-                <li><a href="#" title="Resume">Resume</a></li>
+                <li><a href="./assets/CV/greg-olson-resume.pdf" title="Resume">Resume</a></li>
                 <li><a href="#" title="About Me">About</a></li>
                 <li><a href="https://github.com/mountainflow" title="GitHub">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/greg-olson-mountainflow" title="LinkedIn">LinkedIn</a></li>
