working on lightbox

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     style="fill:none;stroke:#ffffff;stroke-width:0.36px;" />
             </svg>
         </div>
-        <div class="nav">
+        <div class="folio-nav">
             <ul>
                 <li><a href="./portfolio.html" title="Portfolio">Portfolio</a></li>
                 <li><a href="./assets/CV/greg-olson-resume.pdf" title="Resume">Resume</a></li>
