--- a/portfolio.html
+++ b/portfolio.html
@@ -12,20 +12,19 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Lato:100|Montserrat:300,400|Raleway:100|Roboto:100&display=swap">
     <link rel="stylesheet" href="./assets/css/normalize.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/portfolio.css" />
     <link rel="stylesheet" href="./assets/css/media.css" />
 </head>
 
 <body>
-    <div class="main-container">
-        <div class="header">
-            <p>Portfolio</p>
-            <p>Coming Soon!</p>
+    <div class="folio-main-container">
+        <div class="folio-main">
+        <div class="gallery">
+            <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme"><img
+                    src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" /></a>
         </div>
-        <div class="main">
-
         </div>
-        <div class="nav">
+        <div class="folio-nav">
             <ul>
                 <li><a href="./index.html" title="Home">Home</a></li>
                 <li><a href="./assets/CV/greg-olson-resume.pdf" title="Resume">Resume</a></li>
