having to quit for the day, just about have grid overflow figured out

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,31 @@
 <body>
     <div class="folio-main-container">
         <div class="folio-main">
-        <div class="gallery">
-            <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme"><img
-                    src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" /></a>
+            <div class="gallery">
+                <div class="slideshow">
+                    <a target="_blank" href="https://sheltered-meadow-24497.herokuapp.com/" title="Fur Butlr">
+                        <img class="responsive" src="./assets/images/furButlr_970x600.png" alt="Fur Butlr" />
+                    </a>
+                    <div class="caption">Fur Butlr</div>
+                </div>
+            </div>
+            <!-- <div class="gallery">
+                <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme">
+                    <img src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" />
+                </a>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="https://mighty-everglades-33601.herokuapp.com/" title="Friend Finder">
+                    <img src="./assets/images/friendFinder_970x600.png" alt="Friend Finder" />
+                </a>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="./assets/images/liri.gif" title="Liri">
+                    <img src="./assets/images/liri_970x600.png" alt="Liri" />
+                </a>
+            </div> -->
         </div>
-        </div>
+
         <div class="folio-nav">
             <ul>
                 <li><a href="./index.html" title="Home">Home</a></li>
