--- a/portfolio.html
+++ b/portfolio.html
@@ -26,22 +26,38 @@
                     </a>
                     <div class="caption">Fur Butlr</div>
                 </div>
+                
+                <div class="slideshow">
+                    <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme">
+                        <img src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" />
+                    </a>
+                    <div class="caption">ChatMeme</div>
+                </div>
+                <div class="slideshow">
+                    <a target="_blank" href="https://mighty-everglades-33601.herokuapp.com/" title="Friend Finder">
+                        <img src="./assets/images/friendFinder_970x600.png" alt="Friend Finder" />
+                    </a>
+                    <div class="caption">Friend Finder</div>
+                </div>
+                <div class="slideshow">
+                    <a target="_blank" href="./assets/images/liri.gif" title="Liri">
+                        <img src="./assets/images/liri_970x600.png" alt="Liri" />
+                    </a>
+                    <div class="caption">Liri</div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <!-- <div class="gallery-container">
-                <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme">
-                    <img src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" />
-                </a>
+            <br>
+
+            <!-- The dots/circles -->
+            <div>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-            <div class="gallery-container">
-                <a target="_blank" href="https://mighty-everglades-33601.herokuapp.com/" title="Friend Finder">
-                    <img src="./assets/images/friendFinder_970x600.png" alt="Friend Finder" />
-                </a>
-            </div>
-            <div class="gallery-container">
-                <a target="_blank" href="./assets/images/liri.gif" title="Liri">
-                    <img src="./assets/images/liri_970x600.png" alt="Liri" />
-                </a>
-            </div> -->
         </div>
 
         <div class="folio-nav">
