--- a/portfolio.html
+++ b/portfolio.html
@@ -20,37 +20,36 @@
     <div class="folio-main-container">
         <div class="folio-main">
             <div class="gallery-container">
-                <div class="slideshow">
+                <div class="slideshow image-fade">
                     <a target="_blank" href="https://sheltered-meadow-24497.herokuapp.com/" title="Fur Butlr">
                         <img class="responsive" src="./assets/images/furButlr_970x600.png" alt="Fur Butlr" />
                     </a>
                     <div class="caption">Fur Butlr</div>
-                </div>
-                
-                <div class="slideshow">
+                </div>                
+                <div class="slideshow image-fade">
                     <a target="_blank" href="https://chat-meme-3fbf6.firebaseapp.com/" title="ChatMeme">
-                        <img src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" />
+                        <img class="responsive" src="./assets/images/chatMeme_970x600.png" alt="ChatMeme" />
                     </a>
                     <div class="caption">ChatMeme</div>
                 </div>
-                <div class="slideshow">
+                <div class="slideshow image-fade">
                     <a target="_blank" href="https://mighty-everglades-33601.herokuapp.com/" title="Friend Finder">
-                        <img src="./assets/images/friendFinder_970x600.png" alt="Friend Finder" />
+                        <img class="responsive" src="./assets/images/friendFinder_970x600.png" alt="Friend Finder" />
                     </a>
                     <div class="caption">Friend Finder</div>
                 </div>
-                <div class="slideshow">
+                <div class="slideshow image-fade">
                     <a target="_blank" href="./assets/images/liri.gif" title="Liri">
-                        <img src="./assets/images/liri_970x600.png" alt="Liri" />
+                        <img class="responsive" src="./assets/images/liri_970x600.png" alt="Liri" />
                     </a>
                     <div class="caption">Liri</div>
                 </div>
 
                 <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <a class="prev" title="Previous" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" title="Next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <br>
+            <br/>
 
             <!-- The dots/circles -->
             <div>
