fixed a few small issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             </div>
             <br/>
 
-            <!-- The dots/circles -->
+            <!-- The dots/circles for image nav -->
             <div>
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
